# qtk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.qrc
.gitea/workflows/: all-builds.yml  linting.yml
.github/workflows/: all-builds.yml  build-test.yml  build.yml  linting.yml
app/: examplescene.cpp  examplescene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h
cmake/include/: git_submodule.cmake
cmake/templates/: Config.cmake.in
example-app/: CMakeLists.txt  README.md  examplescene.cpp  examplescene.h  examplewidget.cpp  examplewidget.h  main.cpp  resources.h.in
lib/: camera3d.cpp  camera3d.h  input.cpp  input.h  mainwidget.cpp  mainwidget.h  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  model.cpp  model.h  object.cpp  object.h  scene.cpp  scene.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transform3D.cpp  transform3D.h
resources/: minimal_resources.qrc  qtk.desktop  resources.qrc
resources/icons/linux/: linux-icons.sh
resources/icons/osx/: README.md  kilroy.icns  osx-icons.sh
resources/icons/win/: win-icons.sh
resources/models/alien-hominid/: alien.mtl
resources/models/bird/: bird.mtl
resources/models/lion/: lion.mtl
resources/models/scythe/: scythe.mtl
resources/models/spartan/: spartan.mtl
resources/shaders/fragment/: model-basic.frag  model-normals.frag  model-phong.frag  multi-color.frag  phong.frag  rgb-normals.frag  solid-ambient.frag  solid-diffuse.frag  solid-phong.frag  solid-specular.frag  texture-cubemap.frag  texture2d.frag
resources/shaders/vertex/: model-basic.vert  model-normals.vert  model-phong.vert  multi-color.vert  phong.vert  rgb-normals.vert  solid-ambient.vert  solid-diffuse.vert  solid-perspective.vert  solid-phong.vert  solid-specular.vert  solid.vert  texture-cubemap.vert  texture2d.vert
resources/skybox/: skybox.frag  skybox.vert
src/: CMakeLists.txt  abstractscene.cpp  abstractscene.h  camera3d.cpp  camera3d.h  input.cpp  input.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  model.cpp  model.h  object.cpp  object.h  qtkapi.h  qtkresources.h.in  qtkwidget.cpp  qtkwidget.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transform3D.cpp  transform3D.h
src/app/: CMakeLists.txt  debugconsole.cpp  debugconsole.h  logger.cpp  logger.h  main.cpp  qtkmainwindow.cpp  qtkmainwindow.h  qtkmainwindow.ui  qtkscene.cpp  qtkscene.h  qtkwidget.cpp  qtkwidget.h  resources.h.in  toolbox.cpp  toolbox.h  toolbox.ui  treeview.cpp  treeview.h  widgetplugin.cpp  widgetplugin.h  widgetplugincollection.cpp  widgetplugincollection.h
src/designer-plugins/: CMakeLists.txt  debugconsole.cpp  debugconsole.h  debugconsole.ui  qtkwidget.cpp  qtkwidget.h  toolbox.cpp  toolbox.h  toolbox.ui  treeview.cpp  treeview.h  treeview.ui  widgetplugin.cpp  widgetplugin.h  widgetplugincollection.cpp  widgetplugincollection.h
src/qtk/: CMakeLists.txt  camera3d.cpp  camera3d.h  input.cpp  input.h  meshrenderer.cpp  meshrenderer.h  model.cpp  model.h  modelmesh.cpp  modelmesh.h  object.cpp  object.h  qtkapi.h  qtkiostream.cpp  qtkiostream.h  qtkiosystem.cpp  qtkiosystem.h  qtkmessagelogger.cpp  qtkmessagelogger.h  scene.cpp  scene.h  shaders.h  shape.cpp  shape.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transform3D.cpp  transform3D.h
tools/: format.sh
